--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,10 +1,10 @@
-# ???????????? ????????? ?????? (Data Source)
+#Data Source
 driver_class=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/spring_mvc_db?useSSL=false
 db.username=root
 db.password=root
 
-# ???????????? ?????? Hibernate
+#Hibernate
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
