--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,6 +5,6 @@ db.username=root
 db.password=root
 
 #Hibernate
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
