--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
   <url>http://maven.apache.org</url>
   <properties>
     <spring.version>5.3.14</spring.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
